removal of unnecessary IDs, renaming of surviving IDs to better match where they are located and what they do, wrapping certain other elements in anchor tags, some small CSS fixes

--- a/public/css/breakpoints.css
+++ b/public/css/breakpoints.css
@@ -36,7 +36,7 @@
 			z-index:1000;
 		}
 
-		.messageListMenu { border:1px solid #444444; }
+		.messageListMenu { border-right:1px solid #444444; }
 
 	}
 
